--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
               <img src="img/team-6.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>Sarah Jhonson</h4>
+                  <h4>Yiannis Aloimonos</h4>
                   <span>顾问</span>
                   <div class="social">
                     马里兰大学计算机视觉实验室主任<br>
@@ -265,7 +265,7 @@
               <img src="img/team-7.jpg" class="img-fluid" alt="">
               <div class="member-info">
                 <div class="member-info-content">
-                  <h4>λ Cornelia Fermuller</h4>
+                  <h4>Cornelia Fermuller</h4>
                   <span>顾问</span>
                   <div class="social">
                     在美国马里兰大学从事研究工作超过20年，在计算机视觉领域（包括图像处理、三维动作预测等）卓有建树，并承担计算机系学生教学工作
